--- a/diaryRN/package.json
+++ b/diaryRN/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "expo": "~49.0.13",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
-    "expo-image-picker": "~14.3.2"
+    "react-native-image-viewing": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
